--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,83 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.14
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-altair==5.5.0
-altgraph==0.17.4
-amqp==5.3.1
-aniso8601==10.0.0
-asgiref==3.8.1
-attrs==25.1.0
-beautifulsoup4==4.13.3
-billiard==4.2.1
-blinker==1.9.0
-Brotli==1.1.0
-cachetools==5.5.2
-celery==5.4.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-clr_loader==0.2.7.post0
+asgiref==3.7.2
+backcall==0.2.0
+certifi==2024.2.2
+cffi>=1.17
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-cron-descriptor==1.4.5
-cryptography==44.0.3
-cssselect2==0.8.0
-distlib==0.3.9
-Django==5.1.6
+comm==0.2.1
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+Django==4.2.20  # ✅ Updated to match django-tailwind dependency
+django-allauth==0.62.0
 django-appconf==1.1.0
 django-celery-beat==2.7.0
 django-cors-headers==4.7.0
+django-crispy-forms==2.1
 django-cryptography==1.1
+django-debug-toolbar==4.3.0
+django-environ==0.11.2
+django-filter==24.2
+django-model-utils==4.4.0
+django-stubs-ext==4.2.7
 django-tailwind==4.0.1
-django-timezone-field==7.1
-djangorestframework==3.15.2
-et_xmlfile==2.0.0
-filelock==3.18.0
-Flask==3.1.0
-Flask-Login==0.6.3
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-fonttools==4.56.0
-frozendict==2.4.6
-frozenlist==1.5.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-idna==3.10
-inflect==7.5.0
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kombu==5.5.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-more-itertools==10.6.0
-multidict==6.2.0
-multitasking==0.0.11
-mysql-connector-python==9.2.0
-mysqlclient==2.2.7
-mysqlconnect==1.0.0
-narwhals==1.27.1
-numpy==2.2.3
-openpyxl==3.1.5
-packaging==24.2
-pandas==2.2.3
-peewee==3.17.9
-pefile==2023.2.7
-pillow==11.1.0
-platformdirs==4.3.7
-prompt_toolkit==3.0.50
-propcache==0.3.0
-protobuf==5.29.3
-pyarrow==19.0.1
+djangorestframework==3.15.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.1
+fonttools==4.51.0
+idna==3.7
+importlib-metadata==7.1.0
+importlib-resources==6.4.0
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.2
+jupyter-client==8.6.1
+jupyter-core==5.7.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+nest-asyncio==1.6.0
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==24.0
+pandas==2.2.2
+parso==0.8.4
+pickleshare==0.7.5
+Pillow==10.3.0
+platformdirs==4.2.2
+prompt-toolkit==3.0.43
+protobuf==5.26.1
+psycopg2-binary==2.9.9
+pure-eval==0.2.2
 pycparser==2.22
-pydeck==0.9.1
-pydyf==0.11.0
-Pygments==2.19.1
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
-PyJWT==2.10.1
-PyMySQL==1.1.1
-pyphen==0.17.2
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.17.0
-python-crontab==3.2.0
+Pygments==2.18.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pythonnet==3.0.5
-pytz==2025.1
-pywin32-ctypes==0.2.3
-qrcode==8.0
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.23.0
-setuptools==75.8.0
-six==1.17.0
-smmap==5.0.2
-soupsieve==2.6
-sqlacodegen==2.3.0.post1
-SQLAlchemy==2.0.38
-sqlparse==0.5.3
-streamlit==1.42.2
-tenacity==9.0.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-toml==0.10.2
-tornado==6.4.2
-typeguard==4.4.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-vine==5.1.0
-virtualenv==20.29.3
-watchdog==6.0.0
+pytz==2024.1
+pywin32==306
+pyzmq==26.0.3
+requests==2.32.2
+scikit-learn==1.4.2
+scipy==1.13.1
+seaborn==0.13.2
+six==1.16.0
+sqlparse==0.5.0
+stack-data==0.6.3
+sympy==1.12
+tabulate==0.9.0
+threadpoolctl==3.5.0
+tornado==6.4
+traitlets==5.14.3
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
 wcwidth==0.2.13
-weasyprint==64.1
-webencodings==0.5.1
-Werkzeug==3.1.3
-wfastcgi==3.0.0
-WTForms==3.2.1
-yarl==1.18.3
-yfinance==0.2.55
-zopfli==0.2.3.post1
+Werkzeug>=3.1
+zipp==3.18.1
