--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,139 @@
-asgiref==3.7.2
-backcall==0.2.0
-certifi==2024.2.2
-cffi>=1.17
-charset-normalizer==3.3.2
-click==8.1.7
+aiohappyeyeballs==2.6.1
+
+aiohttp==3.8.5
+
+aiohttp-retry==2.8.3
+
+aiosignal==1.3.1
+
+asgiref==3.6.0
+
+async-timeout==4.0.3
+
+attrs==23.1.0
+
+Brotli==1.0.9
+
+certifi==2023.7.22
+
+cffi==1.15.1
+
+charset-normalizer==3.1.0
+
 colorama==0.4.6
-comm==0.2.1
-contourpy==1.2.1
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-Django==4.2.20  # ✅ Updated to match django-tailwind dependency
-django-allauth==0.62.0
-django-appconf==1.1.0
-django-celery-beat==2.7.0
-django-cors-headers==4.7.0
-django-crispy-forms==2.1
-django-cryptography==1.1
-django-debug-toolbar==4.3.0
-django-environ==0.11.2
-django-filter==24.2
-django-model-utils==4.4.0
-django-stubs-ext==4.2.7
-django-tailwind==3.6.0
-djangorestframework==3.15.1
+
+cssselect2==0.7.0
+
+Django==4.2.10
+
+django-extensions==3.2.1
+
+dotenv==0.9.9
+
 et-xmlfile==1.1.0
-exceptiongroup==1.2.1
-fonttools==4.51.0
-idna==3.7
-importlib-metadata==7.1.0
-importlib-resources==6.4.0
-ipykernel==6.29.4
-ipython==8.24.0
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.4.2
-jupyter-client==8.6.1
-jupyter-core==5.7.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-nest-asyncio==1.6.0
-numpy==1.26.4
+
+exceptiongroup==1.2.2
+
+fonttools==4.39.4
+
+frozenlist==1.3.3
+
+git-filter-repo==2.38.0
+
+gunicorn==20.1.0
+
+html5lib==1.1
+
+idna==3.4
+
+iniconfig==2.0.0
+
+multidict==6.0.4
+
+mysql==0.0.3
+
+mysqlclient==2.1.1
+
+numpy==1.24.4
+
 openpyxl==3.1.2
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pickleshare==0.7.5
-Pillow==10.3.0
-platformdirs==4.2.2
-prompt-toolkit==3.0.43
-protobuf==5.26.1
-psycopg2-binary==2.9.9
-pure-eval==0.2.2
-pycparser==2.22
-Pygments==2.18.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pywin32==306
-pyzmq==26.0.3
-requests==2.32.2
-scikit-learn==1.4.2
-scipy==1.13.1
-seaborn==0.13.2
+
+packaging==23.1
+
+pandas==1.5.3
+
+patsy==0.5.3
+
+Pillow==9.5.0
+
+pluggy==1.2.0
+
+propcache==0.3.1
+
+pycparser==2.21
+
+pydyf==0.10.0
+
+PyJWT==2.8.0
+
+PyMySQL==1.1.0
+
+pyphen==0.14.0
+
+pypng==0.20220715.0
+
+PyQt5==5.15.9
+
+PyQt5-Qt5==5.15.2
+
+PyQt5-sip==12.11.0
+
+pytest==7.4.4
+
+python-barcode==0.14.0
+
+python-dateutil==2.8.2
+
+python-dotenv==1.0.0
+
+pytz==2023.3
+
+qrcode==7.4.2
+
+requests==2.31.0
+
+scipy==1.10.1
+
 six==1.16.0
-sqlparse==0.5.0
-stack-data==0.6.3
-sympy==1.12
-tabulate==0.9.0
-threadpoolctl==3.5.0
-tornado==6.4
-traitlets==5.14.3
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
-wcwidth==0.2.13
-Werkzeug>=3.1
-zipp==3.18.1
+
+sqlparse==0.4.4
+
+statsmodels==0.13.5
+
+tinycss2==1.2.1
+
+tinyhtml5==2.0.0
+
+tomli==2.2.1
+
+twilio==8.10.0
+
+typing_extensions==4.12.2
+
+tzdata==2023.3
+
+urllib3==1.26.16
+
+weasyprint==60.1
+
+webencodings==0.5.1
+
+wfastcgi==3.0.0
+
+whitenoise==6.9.0
+
+yarl==1.9.2
+
+zopfli==0.2.2
+
+ 
